Избавился от Checked Framework'а, рефакторинг, написание тестов
- Удалил зависимость от Checked Framework, так как на данный момент он своими предупреждениями только мешает
- Рефакторинг
- Декомпозиция DaoSourceFactory классов
- Написание тестов